--- a/src/template/header.pug
+++ b/src/template/header.pug
@@ -10,14 +10,14 @@
   </div>
   <div class="container-fluid">
     <div class="row justify-content-between align-items-center">
-      <div class="col-auto">
+      <div class="col">
         <a href="/" class="logo"><img src="img/logo.png" alt="Логотип">&nbsp;</a>
       </div>
       <div class="col-auto col-md-8">
         <div class="row justify-content-md-between justify-content-end align-items-center">
           <div class="d-none d-md-block col-auto">г. Иваново, <br>  пл. Революции, д.7, оф. 210Б</div>
           <div class="d-none d-ml-block col-ml-auto">Пн.-пт.  9:00 - 19:00 <br>Сб.  10:00 - 16:00</div>
-          <div class="d-none d-sm-block col-auto header__phone">
+          <div class="col-auto header__phone">
             <b>8 (4932) 77-36-22</b>
             <a href="#">Заказать звонок</a>
           </div>
