--- a/src/index.pug
+++ b/src/index.pug
@@ -16,7 +16,7 @@ include template/head.pug
         <div class="container-fluid">
           <div class="preface__wrap">
             <div class="row no-gutters">
-              <div class="col-sm-10 col-xl-7">
+              <div class="col-sm-8 col-md-9 col-xl-7">
                 <div class="preface__holder">
                   <h1>Оформим визу <br>  в 44 страны мира <span>с гарантией получения <b>от 1 дня</b></span></h1>
                   <div class="preface__subtitle"><span></span><span>Выдали 12.000 виз <br> за 8 лет работы </span></div>
@@ -96,7 +96,7 @@ include template/head.pug
         <div class="container-fluid">
           <div class="reasons__holder">
             <div class="row h-100">
-              <div class="col-sm-9 col-md-8 col-ml-6">
+              <div class="col-sm-8 col-ml-6">
                 <div class="reasons__content">
                   <h2>Почему 12.000 клиентов  выбрали нас</h2>
                   <ul class="checked-list">
@@ -358,7 +358,7 @@ include template/head.pug
                       </li>
                     </ul>
                   </div>
-                  <div class="col-md-6 col-ml-4 align-self-end">
+                  <div class="col-md-6 col-ml-5 col-xl-4 align-self-end">
                     <form class="consult-form">
                       <div class="consult-form__title">Получите консультацию  визового эксперта бесплатно</div>
                       <div class="consult-form__subtitle">Наш специалист позвонит вам в течение  30 минут и проконсультирует бесплатно</div>
@@ -446,7 +446,7 @@ include template/head.pug
                     <div class="visa-type__btn">
                       <a href="#" class="btn">
                         <div class="btn__holder">
-                          <div class="btn__text">Оформить <br> визу</div>
+                          <div class="btn__text">Оформить визу</div>
                           <div class="btn__ico">
                             +icon('click')
                           </div>
@@ -476,7 +476,7 @@ include template/head.pug
                     <div class="visa-type__btn">
                       <a href="#" class="btn">
                         <div class="btn__holder">
-                          <div class="btn__text">Оформить <br> визу</div>
+                          <div class="btn__text">Оформить визу</div>
                           <div class="btn__ico">
                             +icon('click')
                           </div>
@@ -505,7 +505,7 @@ include template/head.pug
                     <div class="visa-type__btn">
                       <a href="#" class="btn">
                         <div class="btn__holder">
-                          <div class="btn__text">Оформить <br> визу</div>
+                          <div class="btn__text">Оформить визу</div>
                           <div class="btn__ico">
                             +icon('click')
                           </div>
@@ -532,7 +532,7 @@ include template/head.pug
                     <div class="visa-type__btn">
                       <a href="#" class="btn">
                         <div class="btn__holder">
-                          <div class="btn__text">Оформить <br> визу</div>
+                          <div class="btn__text">Оформить визу</div>
                           <div class="btn__ico">
                             +icon('click')
                           </div>
@@ -561,7 +561,7 @@ include template/head.pug
                     <div class="visa-type__btn">
                       <a href="#" class="btn">
                         <div class="btn__holder">
-                          <div class="btn__text">Оформить <br> визу</div>
+                          <div class="btn__text">Оформить визу</div>
                           <div class="btn__ico">
                             +icon('click')
                           </div>
@@ -651,7 +651,7 @@ include template/head.pug
                         <div class="calc__btn">
                           <button class="btn">
                             <div class="btn__holder">
-                              <div class="btn__text">Получить <br> расчет</div>
+                              <div class="btn__text">Получить расчет</div>
                               <div class="btn__ico">
                                 +icon('click')
                               </div>
@@ -703,7 +703,7 @@ include template/head.pug
                   <div class="faq__btn">
                     <a href="#" class="btn">
                       <div class="btn__holder">
-                        <div class="btn__text">Задать <br> вопрос</div>
+                        <div class="btn__text">Задать вопрос</div>
                         <div class="btn__ico">
                           +icon('qst')
                         </div>
@@ -716,13 +716,13 @@ include template/head.pug
             <div class="col-md-8">
               <ul class="faq-list" id="accordion">
                 <li>
-                  <a href="#" class="faq-list__btn" data-toggle="collapse" data-target="#scroll-down1" aria-expanded="false" aria-controls="scroll-down1"><span>Визу в какую страну лучше оформлять  в моем случае?</span></a>
+                  <a href="#" class="faq-list__btn collapsed" data-toggle="collapse" data-target="#scroll-down1" aria-expanded="false" aria-controls="scroll-down1"><span>Визу в какую страну лучше оформлять  в моем случае?</span></a>
                   <div class="collapse" id="scroll-down1" data-parent="#accordion">
                     <div class="faq-list__content">
                       <p class="mb-4">Наш визовый эксперт проконсультирует вас лично по тел.: 8(4932)77-36-22 или нажмите</p>
                       <a href="#" class="btn mb-3">
                         <div class="btn__holder">
-                          <div class="btn__text">Заказать <br> звонок</div>
+                          <div class="btn__text">Заказать звонок</div>
                           <div class="btn__ico">
                             +icon('click')
                           </div>
@@ -732,7 +732,7 @@ include template/head.pug
                   </div>
                 </li>
                 <li>
-                  <a href="#" class="faq-list__btn" data-toggle="collapse" data-target="#scroll-down2" aria-expanded="false" aria-controls="scroll-down2"><span>Какой пакет документов необходим?</span></a>
+                  <a href="#" class="faq-list__btn collapsed" data-toggle="collapse" data-target="#scroll-down2" aria-expanded="false" aria-controls="scroll-down2"><span>Какой пакет документов необходим?</span></a>
                   <div class="collapse" id="scroll-down2" data-parent="#accordion">
                     <div class="faq-list__content">
                       <ul class="checked-list mb-3">
@@ -753,19 +753,19 @@ include template/head.pug
                   </div>
                 </li>
                 <li>
-                  <a href="#" class="faq-list__btn" data-toggle="collapse" data-target="#scroll-down3" aria-expanded="false" aria-controls="scroll-down3"><span>Какой пакет документов подготовите  вы для меня?</span></a>
+                  <a href="#" class="faq-list__btn collapsed" data-toggle="collapse" data-target="#scroll-down3" aria-expanded="false" aria-controls="scroll-down3"><span>Какой пакет документов подготовите  вы для меня?</span></a>
                   <div class="collapse" id="scroll-down3" data-parent="#accordion">
                     <div class="faq-list__content">3</div>
                   </div>
                 </li>
                 <li>
-                  <a href="#" class="faq-list__btn" data-toggle="collapse" data-target="#scroll-down4" aria-expanded="false" aria-controls="scroll-down4"><span>Включены ли в стоимость консульские  и визовые сборы?</span></a>
+                  <a href="#" class="faq-list__btn collapsed" data-toggle="collapse" data-target="#scroll-down4" aria-expanded="false" aria-controls="scroll-down4"><span>Включены ли в стоимость консульские  и визовые сборы?</span></a>
                   <div class="collapse" id="scroll-down4" data-parent="#accordion">
                     <div class="faq-list__content">4</div>
                   </div>
                 </li>
                 <li>
-                  <a href="#" class="faq-list__btn" data-toggle="collapse" data-target="#scroll-down5" aria-expanded="false" aria-controls="scroll-down5"><span>Сроки выдачи</span></a>
+                  <a href="#" class="faq-list__btn collapsed" data-toggle="collapse" data-target="#scroll-down5" aria-expanded="false" aria-controls="scroll-down5"><span>Сроки выдачи</span></a>
                   <div class="collapse" id="scroll-down5" data-parent="#accordion">
                     <div class="faq-list__content">5</div>
                   </div>
@@ -791,10 +791,16 @@ include template/head.pug
                     <div class="col-md-6 order-2 order-md-1">
                       <div class="reviews__content">
                         +icon('quote')
-                        <h3>Спасибо, что быстро.</h3>
-                        <p>Документы приняли без проблем и очередей  всего за 10 минут.</p>
-                        <p>Все объяснили и рассказали. Уже через пять  дней получила свой паспорт и визу.  Какая я счастливая, ура, завтра лечу в Индию.</p>
-                        <a href="#" class="reviews__read-more">Читать полностью</a>
+                        <div class="read-more">
+                          <div class="collapse mb-3" id="collapseSummary">
+                            <h3>Спасибо, что быстро.</h3>
+                            <p>Документы приняли без проблем и очередей  всего за 10 минут.</p>
+                            <p>Все объяснили и рассказали. Уже через пять  дней получила свой паспорт и визу.  Какая я счастливая, ура, завтра лечу в Индию.</p>
+                            <p>Все объяснили и рассказали. Уже через пять  дней получила свой паспорт и визу.  Какая я счастливая, ура, завтра лечу в Индию.</p>
+                            <p>Все объяснили и рассказали. Уже через пять  дней получила свой паспорт и визу.  Какая я счастливая, ура, завтра лечу в Индию.</p>
+                          </div>
+                          <a class="collapsed" data-toggle="collapse" href="#collapseSummary" aria-expanded="false" aria-controls="collapseSummary">Читать полностью</a>
+                        </div>
                         <div class="row align-items-center">
                           <div class="col-auto">
                             <div class="reviews__flag">
@@ -820,10 +826,16 @@ include template/head.pug
                     <div class="col-md-6 order-2 order-md-1">
                       <div class="reviews__content">
                         +icon('quote')
-                        <h3>Спасибо, что быстро.</h3>
-                        <p>Документы приняли без проблем и очередей  всего за 10 минут.</p>
-                        <p>Все объяснили и рассказали. Уже через пять  дней получила свой паспорт и визу.  Какая я счастливая, ура, завтра лечу в Индию.</p>
-                        <a href="#" class="reviews__read-more">Читать полностью</a>
+                        <div class="read-more">
+                          <div class="collapse mb-3" id="collapseSummary2">
+                            <h3>Спасибо, что быстро.</h3>
+                            <p>Документы приняли без проблем и очередей  всего за 10 минут.</p>
+                            <p>Все объяснили и рассказали. Уже через пять  дней получила свой паспорт и визу.  Какая я счастливая, ура, завтра лечу в Индию.</p>
+                            <p>Все объяснили и рассказали. Уже через пять  дней получила свой паспорт и визу.  Какая я счастливая, ура, завтра лечу в Индию.</p>
+                            <p>Все объяснили и рассказали. Уже через пять  дней получила свой паспорт и визу.  Какая я счастливая, ура, завтра лечу в Индию.</p>
+                          </div>
+                          <a class="collapsed" data-toggle="collapse" href="#collapseSummary2" aria-expanded="false" aria-controls="collapseSummary2">Читать полностью</a>
+                        </div>
                         <div class="row align-items-center">
                           <div class="col-auto">
                             <div class="reviews__flag">
@@ -858,7 +870,7 @@ include template/head.pug
           <div class="text-center">
             <a href="#" class="btn">
               <div class="btn__holder">
-                <div class="btn__text">Оформить <br> визу</div>
+                <div class="btn__text">Оформить визу</div>
                 <div class="btn__ico">
                   +icon('click')
                 </div>
@@ -876,10 +888,16 @@ include template/head.pug
             <div class="row justify-centent-center justify-centent-md-between">
               <div class="col-md mb-5 mb-md-0">
                 <div class="find-us__content">
-                  <div class="find-us__subtitle">Адрес:</div>
-                  <div class="find-us__text"><span>г. Иваново,</span> <span>пл. Революции, д.7, оф. 210Б</span></div>
-                  <div class="find-us__subtitle">Режим работы: </div>
-                  <div class="find-us__text"><span>Пн.-пт.  9:00 - 19:00 Сб.</span><span>10:00 - 16:00</span></div>
+                  <div class="row">
+                    <div class="col-sm-6 col-md-12">
+                      <div class="find-us__subtitle">Адрес:</div>
+                      <div class="find-us__text"><span>г. Иваново,</span> <span>пл. Революции, д.7, оф. 210Б</span></div>
+                    </div>
+                    <div class="col-sm-6 col-md-12">
+                      <div class="find-us__subtitle">Режим работы: </div>
+                      <div class="find-us__text"><span>Пн.-пт.  9:00 - 19:00 Сб.</span><span>10:00 - 16:00</span></div>
+                    </div>
+                  </div>
                   <div class="find-us__phone">8(4932)77-36-22</div>
                   <ul class="socials">
                     <li class="socials__vk"><a href="#">&nbsp;</a></li>
@@ -944,7 +962,7 @@ include template/head.pug
                   <input type="text" class="input consult-form__input" placeholder="Введите свой номер телефон">
                   <a href="#" class="btn">
                     <div class="btn__holder">
-                      <div class="btn__text">Получить <br> консультацию</div>
+                      <div class="btn__text">Получить <br>консультацию</div>
                       <div class="btn__ico">
                         +icon('phone')
                       </div>
